# inventory-service-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-migrate  README.md  docker-compose.yaml  docker-entrypoint.sh
.sqlx/: query-09b6eb220ef7ff91b416e4d77c68cb9743dc517452b766753501c11332ae5812.json  query-0d054208c1c82d6ee855dedc4444a81cb7f8d06292812bd9a2917b16d514152f.json  query-0fe9e02822c4945f14faae3adba6cbabc91f4b64126ef00691f7b3779ee24b02.json  query-20d760589db9438bad2388c6afad49e6338cf4815f85a3246da6c9e7cb103bcd.json  query-213df959044dfc6c964f0f16cb6cf958969e4b6f7c96cdb9837282180bab4f33.json  query-2ca6567c95845ac1b1401ec53a0ef27212502f5409e727c6d67c433097566ca7.json  query-30f360b79472ea3c72a9a240ea2edb1dcd07c9fa13683213c6902f6b3b5eec76.json  query-3739972cc7e05fb321740b1ab4fe31b971e864caaeca6662e6025e4ce5bf1ef3.json  query-38d0d3f7b63ec68da8468b73f095fa7c7f803f502d11237b186b740d72dc876f.json  query-425eb888e1c260a1a2e9823499fd0604769b427ed4123415025646677815e0f2.json  query-47c1eafdbe22e1c8265bea5a0f021192648908762848dfd31e9a515531ec22a8.json  query-48d6e37f96a0a68900a67c071907b6b441c07fdc9b118fea9e046b3fe230e30c.json  query-54084b5c5a7310d9fb52dbfe6a3271fe66ccb6cf67d51bdd0941f397687c8624.json  query-5bf346db286f0055d2af47392de3880a2f6bca4933c508566bc4afd947076ac9.json  query-6255f6e542d2f82551ae3196ab74495b3ebed19a1a8fcb1d34dd0d9ba69d893b.json  query-746d3c30d31acdf4d7724a9a814efd33fb873e2218f63121ef13077ca4cd1ee3.json  query-75053331c61f8ad52af5716fa8e668617d39824faeed5483cb59155c98485fa5.json  query-781c866b081c66337d668d9ae78869850c310bef087cf930f0769efde25b875e.json  query-7a76d485702074f5535add0fb5178ccddbf618db6061e8e9ca3640588eecabf9.json  query-86cd8b775b28c9fddfb2e63fe26205e4b5a70abafac1fefbcdfae534f2a51bd9.json  query-8a348ee3d50908f733e0403a7a8d9f535b753b1c98f87da66ac9294d3985a100.json  query-8a3dedcd9191fef07032efd25a0b4a54477685129c6dbd22b45fdc10ab4272af.json  query-8b88612bda625680de43bc9a2fb120fd869cc1e148539f8a15ac8c3952b7a1ab.json  query-920cb41f46cf6a96de9fa8324ee531f06982f630e2c7289ebfe7a8ab7e94b674.json  query-9693809ea84b2ece8477ad4cff7634b225a22ba91facc6944d14c794d3fd039c.json  query-9c43bf3373c987130ee376e3932ffcfd2c4c97881fa69f9cd9b5a189f619d9bd.json  query-b93b0c7eaa749a4cfb43036e44b6c06424dd41c716ff9edb80b392e0742e969a.json  query-c205388ae3ece0c31096e58808332889b7c942645783bf6cccb0058bb75fb99f.json  query-d86cf228612ee70e46b9916f4b61b759e572ac06a42288ac887385ccaed1a851.json
http/: http-client.env.json  invoice_api.http  item_api.http  metrics.http  person_api.http  status.http
manifests/: README.md  SECRETS.md  config-map.yaml  deployment.yaml  grafana_alloy_config_map.yml  grafana_alloy_deployment_service.yml  grafana_alloy_service_monitor.yml  ingress.yaml  service-monitor.yaml  service.yaml  sqlx-migrate-job.yml
migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_adding_not_null_to_various_fields.down.sql  0002_adding_not_null_to_various_fields.up.sql  0003_change_to_timestampz_from_timestamp.down.sql  0003_change_to_timestampz_from_timestamp.up.sql  0004_add_last_changed_by_to_audit_data.down.sql  0004_add_last_changed_by_to_audit_data.up.sql  0005_rename_item_to_items.down.sql  (+13 more)
src/: jwt.rs  (+4 more)
(+39 files in other folders)
