[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "macros", "postgres"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.18"
