[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
garde = { version = "0.20.0", features = ["full"] }
jsonwebtoken = "9.3.0"
mockall = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["macros", "postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-redoc = "4.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
tower-service = "0.3"
tower = { version = "0.5", features = ["full"] }
once_cell = "1.19.0"