[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-prometheus = "0.7.0"
bigdecimal = { version = "0.4", features = ["serde"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.30"
garde = { version = "0.20.0", features = ["full"] }
jsonwebtoken = "9.3.0"
mockall = "0.13"
once_cell = "1.21"
opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.29"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
pprof = "0.14.0"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["bigdecimal", "macros", "postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower-service = "0.3"
tracing = "0.1.26"
tracing-opentelemetry = { version = "0.30", features = ["metrics", "tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "std"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
utoipa = { version = "5.0.0-alpha.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "4.0.1-alpha.0", features = ["axum"] }
rand = "0.8.5"
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
